--- a/whats-up/frontend/package.json
+++ b/whats-up/frontend/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.5.4",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
     "typescript": "^4.9.3",
