--- a/whats-up/src/main/resources/application.properties
+++ b/whats-up/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 socket-server.port = ${PORT}
 socket-server.host = ${HOST}
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/${DB_NAME}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
